force-app/main/default/objects/Loan_Application_System_Status_Mapping__mdt/Loan_Application_System_Status_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>Loan Application System Status Mapping</label>
    <pluralLabel>Loan Application System Status Mappings</pluralLabel>
</CustomObject>