force-app/main/default/objects/Loan_Application_System_Status_Mapping__mdt/fields/Application_Product_Stage__c.field-meta.xml
<CustomField>
    <fullName>Application_Product_Stage__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Stage of Application form product</description>
    <label>Application Product Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Solution Development</fullName>
                <default>true</default>
                <label>Solution Development</label>
            </value>
            <value>
                <fullName>Approved &amp; Offered</fullName>
            </value>
            <value>
                <fullName>Customer Acceptance</fullName>
            </value>
            <value>
                <fullName>Opportunity Won</fullName>
            </value>
            <value>
                <fullName>Opportunity Lost</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>