force-app/main/default/objects/Loan_Application_System_Status_Mapping__mdt/fields/Application_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Application_Record_Type__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Application Form Record Type</description>
    <label>Application Record Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AMBIT</fullName>
                <default>true</default>
                <label>AMBIT</label>
            </value>
            <value>
                <fullName>CLP</fullName>
            </value>
            <value>
                <fullName>BBD</fullName>
            </value>
            <value>
                <fullName>Internal Application</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>