force-app/main/default/objects/Loan_Application_System_Status_Mapping__mdt/fields/Source_System_Status__c.field-meta.xml
<CustomField>
    <fullName>Source_System_Status__c</fullName>
    <complianceGroup>Integrity - Trusted;Privacy - Personal Information;Source - Loan Domain</complianceGroup>
    <description>The status of the quote in AMBIT</description>
    <label>Source System Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Locked for Assessment</fullName>
                <default>true</default>
                <label>Locked for Assessment</label>
            </value>
            <value>
                <fullName>Credit Approved</fullName>
            </value>
            <value>
                <fullName>Request Settlement</fullName>
            </value>
            <value>
                <fullName>Complete Activated</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>